// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Button > Button baseVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="row"
    data-v-a8b06499=""
  >
    <button
      aria-disabled="false"
      class="t-button t-button--size-large t-button--base t-button--primary t-button--rectangle"
      data-v-a8b06499=""
      role="button"
      type="button"
    >
      <!---->
      <span
        class="t-button__content"
      >
        
        填充按钮
        
      </span>
      <!---->
    </button>
    <button
      aria-disabled="false"
      class="t-button t-button--size-large t-button--base t-button--light t-button--rectangle"
      data-v-a8b06499=""
      role="button"
      type="button"
    >
      <!---->
      <span
        class="t-button__content"
      >
        
        填充按钮
        
      </span>
      <!---->
    </button>
    <button
      aria-disabled="false"
      class="t-button t-button--size-large t-button--base t-button--default t-button--rectangle"
      data-v-a8b06499=""
      role="button"
      type="button"
    >
      <!---->
      <span
        class="t-button__content"
      >
        
        填充按钮
        
      </span>
      <!---->
    </button>
  </div>
  <div
    class="row"
    data-v-a8b06499=""
  >
    <button
      aria-disabled="false"
      class="t-button t-button--size-large t-button--outline t-button--primary t-button--rectangle"
      data-v-a8b06499=""
      role="button"
      type="button"
    >
      <!---->
      <span
        class="t-button__content"
      >
        
        描边按钮
        
      </span>
      <!---->
    </button>
    <button
      aria-disabled="false"
      class="t-button t-button--size-large t-button--text t-button--primary t-button--rectangle"
      data-v-a8b06499=""
      role="button"
      type="button"
    >
      <!---->
      <span
        class="t-button__content"
      >
        
        文字按钮
        
      </span>
      <!---->
    </button>
  </div>
  
</div>
`;

exports[`Button > Button blockVue demo works fine 1`] = `
<div
  class="row"
  data-v-df7bddf2=""
>
  <button
    aria-disabled="false"
    class="t-button t-button--size-large t-button--base t-button--primary t-button--rectangle t-button--block"
    data-v-df7bddf2=""
    role="button"
    type="button"
  >
    <!---->
    <span
      class="t-button__content"
    >
      
      填充按钮
      
    </span>
    <!---->
  </button>
</div>
`;

exports[`Button > Button ghostVue demo works fine 1`] = `
<div
  class="row"
  data-v-3efbf598=""
>
  <button
    aria-disabled="false"
    class="t-button t-button--size-large t-button--base t-button--primary t-button--rectangle t-button--ghost"
    data-v-3efbf598=""
    role="button"
    type="button"
  >
    <!---->
    <span
      class="t-button__content"
    >
      
      幽灵按钮
      
    </span>
    <!---->
  </button>
  <button
    aria-disabled="false"
    class="t-button t-button--size-large t-button--base t-button--danger t-button--rectangle t-button--ghost"
    data-v-3efbf598=""
    role="button"
    type="button"
  >
    <!---->
    <span
      class="t-button__content"
    >
      
      幽灵按钮
      
    </span>
    <!---->
  </button>
  <button
    aria-disabled="false"
    class="t-button t-button--size-large t-button--base t-button--default t-button--rectangle t-button--ghost"
    data-v-3efbf598=""
    role="button"
    type="button"
  >
    <!---->
    <span
      class="t-button__content"
    >
      
      幽灵按钮
      
    </span>
    <!---->
  </button>
</div>
`;

exports[`Button > Button groupVue demo works fine 1`] = `
<div
  class="row"
  data-v-8e466c6d=""
>
  <button
    aria-disabled="false"
    class="t-button t-button--size-large t-button--base t-button--light t-button--rectangle"
    data-v-8e466c6d=""
    role="button"
    type="button"
  >
    <!---->
    <span
      class="t-button__content"
    >
      
      填充按钮
      
    </span>
    <!---->
  </button>
  <button
    aria-disabled="false"
    class="t-button t-button--size-large t-button--base t-button--primary t-button--rectangle"
    data-v-8e466c6d=""
    role="button"
    type="button"
  >
    <!---->
    <span
      class="t-button__content"
    >
      
      填充按钮
      
    </span>
    <!---->
  </button>
</div>
`;

exports[`Button > Button iconVue demo works fine 1`] = `
<div
  class="row"
  data-v-c0b784f5=""
>
  <button
    aria-disabled="false"
    class="t-button t-button--size-large t-button--base t-button--primary t-button--rectangle"
    data-v-c0b784f5=""
    role="button"
    type="button"
  >
    <svg
      class="t-icon t-icon-app"
      fill="none"
      height="1em"
      style="fill: none; font-size: 24px;"
      viewBox="0 0 24 24"
      width="1em"
    >
      <g
        id="app"
      >
        <g
          id="fill1"
        >
          <path
            d="M3 3H10V10H3V3Z"
            fill="transparent"
          />
          <path
            d="M14 14H21V21H14V14Z"
            fill="transparent"
          />
          <path
            d="M3 14H10V21H3V14Z"
            fill="transparent"
          />
        </g>
        <path
          d="M21.5 6.5C21.5 8.70914 19.7091 10.5 17.5 10.5C15.2909 10.5 13.5 8.70914 13.5 6.5C13.5 4.29086 15.2909 2.5 17.5 2.5C19.7091 2.5 21.5 4.29086 21.5 6.5Z"
          fill="transparent"
          id="fill2"
        />
        <g
          id="stroke1"
        >
          <path
            d="M3 3H10V10H3V3Z"
            stroke="currentColor"
            stroke-width="2"
          />
          <path
            d="M14 14H21V21H14V14Z"
            stroke="currentColor"
            stroke-width="2"
          />
          <path
            d="M3 14H10V21H3V14Z"
            stroke="currentColor"
            stroke-width="2"
          />
        </g>
        <path
          d="M21.5 6.5C21.5 8.70914 19.7091 10.5 17.5 10.5C15.2909 10.5 13.5 8.70914 13.5 6.5C13.5 4.29086 15.2909 2.5 17.5 2.5C19.7091 2.5 21.5 4.29086 21.5 6.5Z"
          id="stroke2"
          stroke="currentColor"
          stroke-width="2"
        />
      </g>
    </svg>
    <span
      class="t-button__content"
    >
      
      填充按钮
      
    </span>
    <!---->
  </button>
  <button
    aria-disabled="false"
    class="t-button t-button--size-large t-button--base t-button--primary t-button--square"
    data-v-c0b784f5=""
    role="button"
    type="button"
  >
    <svg
      class="t-icon t-icon-app"
      fill="none"
      height="1em"
      style="fill: none; font-size: 24px;"
      viewBox="0 0 24 24"
      width="1em"
    >
      <g
        id="app"
      >
        <g
          id="fill1"
        >
          <path
            d="M3 3H10V10H3V3Z"
            fill="transparent"
          />
          <path
            d="M14 14H21V21H14V14Z"
            fill="transparent"
          />
          <path
            d="M3 14H10V21H3V14Z"
            fill="transparent"
          />
        </g>
        <path
          d="M21.5 6.5C21.5 8.70914 19.7091 10.5 17.5 10.5C15.2909 10.5 13.5 8.70914 13.5 6.5C13.5 4.29086 15.2909 2.5 17.5 2.5C19.7091 2.5 21.5 4.29086 21.5 6.5Z"
          fill="transparent"
          id="fill2"
        />
        <g
          id="stroke1"
        >
          <path
            d="M3 3H10V10H3V3Z"
            stroke="currentColor"
            stroke-width="2"
          />
          <path
            d="M14 14H21V21H14V14Z"
            stroke="currentColor"
            stroke-width="2"
          />
          <path
            d="M3 14H10V21H3V14Z"
            stroke="currentColor"
            stroke-width="2"
          />
        </g>
        <path
          d="M21.5 6.5C21.5 8.70914 19.7091 10.5 17.5 10.5C15.2909 10.5 13.5 8.70914 13.5 6.5C13.5 4.29086 15.2909 2.5 17.5 2.5C19.7091 2.5 21.5 4.29086 21.5 6.5Z"
          id="stroke2"
          stroke="currentColor"
          stroke-width="2"
        />
      </g>
    </svg>
    <span
      class="t-button__content"
    >
      <!---->
    </span>
    <!---->
  </button>
  <button
    aria-disabled="false"
    class="t-button t-button--size-large t-button--base t-button--primary t-button--rectangle t-button--loading"
    data-v-c0b784f5=""
    role="button"
    type="button"
  >
    <div
      class="t-loading"
      style="font-size: 20px;"
    >
      <svg
        class="t-loading__gradient t-icon-loading"
        height="1em"
        style="animation-duration: 800ms; width: 20px; height: 20px;"
        version="1.1"
        viewBox="0 0 12 12"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <foreignobject
          height="12"
          width="12"
          x="0"
          y="0"
        >
          <div
            class="t-loading__gradient-conic"
          />
        </foreignobject>
      </svg>
      <!---->
      <!---->
    </div>
    <span
      class="t-button__content"
    >
      
      加载中
      
    </span>
    <!---->
  </button>
</div>
`;

exports[`Button > Button mobileVue demo works fine 1`] = `
<div
  class="tdesign-mobile-demo"
  data-v-e07177be=""
>
  <h1
    class="title"
    data-v-e07177be=""
  >
    Button 按钮
  </h1>
  <p
    class="summary"
    data-v-e07177be=""
  >
    按钮用于开启一个闭环的操作任务，如“删除”对象、“购买”商品等。
  </p>
  <div
    class="tdesign-mobile-demo-block"
    data-v-e07177be=""
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        01 组件类型
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        基础按钮
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      
      <div
        class="row"
        data-v-a8b06499=""
      >
        <button
          aria-disabled="false"
          class="t-button t-button--size-large t-button--base t-button--primary t-button--rectangle"
          data-v-a8b06499=""
          role="button"
          type="button"
        >
          <!---->
          <span
            class="t-button__content"
          >
            
            填充按钮
            
          </span>
          <!---->
        </button>
        <button
          aria-disabled="false"
          class="t-button t-button--size-large t-button--base t-button--light t-button--rectangle"
          data-v-a8b06499=""
          role="button"
          type="button"
        >
          <!---->
          <span
            class="t-button__content"
          >
            
            填充按钮
            
          </span>
          <!---->
        </button>
        <button
          aria-disabled="false"
          class="t-button t-button--size-large t-button--base t-button--default t-button--rectangle"
          data-v-a8b06499=""
          role="button"
          type="button"
        >
          <!---->
          <span
            class="t-button__content"
          >
            
            填充按钮
            
          </span>
          <!---->
        </button>
      </div>
      <div
        class="row"
        data-v-a8b06499=""
      >
        <button
          aria-disabled="false"
          class="t-button t-button--size-large t-button--outline t-button--primary t-button--rectangle"
          data-v-a8b06499=""
          role="button"
          type="button"
        >
          <!---->
          <span
            class="t-button__content"
          >
            
            描边按钮
            
          </span>
          <!---->
        </button>
        <button
          aria-disabled="false"
          class="t-button t-button--size-large t-button--text t-button--primary t-button--rectangle"
          data-v-a8b06499=""
          role="button"
          type="button"
        >
          <!---->
          <span
            class="t-button__content"
          >
            
            文字按钮
            
          </span>
          <!---->
        </button>
      </div>
      
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
    data-v-e07177be=""
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        图标按钮
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="row"
        data-v-c0b784f5=""
        data-v-e07177be=""
      >
        <button
          aria-disabled="false"
          class="t-button t-button--size-large t-button--base t-button--primary t-button--rectangle"
          data-v-c0b784f5=""
          role="button"
          type="button"
        >
          <svg
            class="t-icon t-icon-app"
            fill="none"
            height="1em"
            style="fill: none; font-size: 24px;"
            viewBox="0 0 24 24"
            width="1em"
          >
            <g
              id="app"
            >
              <g
                id="fill1"
              >
                <path
                  d="M3 3H10V10H3V3Z"
                  fill="transparent"
                />
                <path
                  d="M14 14H21V21H14V14Z"
                  fill="transparent"
                />
                <path
                  d="M3 14H10V21H3V14Z"
                  fill="transparent"
                />
              </g>
              <path
                d="M21.5 6.5C21.5 8.70914 19.7091 10.5 17.5 10.5C15.2909 10.5 13.5 8.70914 13.5 6.5C13.5 4.29086 15.2909 2.5 17.5 2.5C19.7091 2.5 21.5 4.29086 21.5 6.5Z"
                fill="transparent"
                id="fill2"
              />
              <g
                id="stroke1"
              >
                <path
                  d="M3 3H10V10H3V3Z"
                  stroke="currentColor"
                  stroke-width="2"
                />
                <path
                  d="M14 14H21V21H14V14Z"
                  stroke="currentColor"
                  stroke-width="2"
                />
                <path
                  d="M3 14H10V21H3V14Z"
                  stroke="currentColor"
                  stroke-width="2"
                />
              </g>
              <path
                d="M21.5 6.5C21.5 8.70914 19.7091 10.5 17.5 10.5C15.2909 10.5 13.5 8.70914 13.5 6.5C13.5 4.29086 15.2909 2.5 17.5 2.5C19.7091 2.5 21.5 4.29086 21.5 6.5Z"
                id="stroke2"
                stroke="currentColor"
                stroke-width="2"
              />
            </g>
          </svg>
          <span
            class="t-button__content"
          >
            
            填充按钮
            
          </span>
          <!---->
        </button>
        <button
          aria-disabled="false"
          class="t-button t-button--size-large t-button--base t-button--primary t-button--square"
          data-v-c0b784f5=""
          role="button"
          type="button"
        >
          <svg
            class="t-icon t-icon-app"
            fill="none"
            height="1em"
            style="fill: none; font-size: 24px;"
            viewBox="0 0 24 24"
            width="1em"
          >
            <g
              id="app"
            >
              <g
                id="fill1"
              >
                <path
                  d="M3 3H10V10H3V3Z"
                  fill="transparent"
                />
                <path
                  d="M14 14H21V21H14V14Z"
                  fill="transparent"
                />
                <path
                  d="M3 14H10V21H3V14Z"
                  fill="transparent"
                />
              </g>
              <path
                d="M21.5 6.5C21.5 8.70914 19.7091 10.5 17.5 10.5C15.2909 10.5 13.5 8.70914 13.5 6.5C13.5 4.29086 15.2909 2.5 17.5 2.5C19.7091 2.5 21.5 4.29086 21.5 6.5Z"
                fill="transparent"
                id="fill2"
              />
              <g
                id="stroke1"
              >
                <path
                  d="M3 3H10V10H3V3Z"
                  stroke="currentColor"
                  stroke-width="2"
                />
                <path
                  d="M14 14H21V21H14V14Z"
                  stroke="currentColor"
                  stroke-width="2"
                />
                <path
                  d="M3 14H10V21H3V14Z"
                  stroke="currentColor"
                  stroke-width="2"
                />
              </g>
              <path
                d="M21.5 6.5C21.5 8.70914 19.7091 10.5 17.5 10.5C15.2909 10.5 13.5 8.70914 13.5 6.5C13.5 4.29086 15.2909 2.5 17.5 2.5C19.7091 2.5 21.5 4.29086 21.5 6.5Z"
                id="stroke2"
                stroke="currentColor"
                stroke-width="2"
              />
            </g>
          </svg>
          <span
            class="t-button__content"
          >
            <!---->
          </span>
          <!---->
        </button>
        <button
          aria-disabled="false"
          class="t-button t-button--size-large t-button--base t-button--primary t-button--rectangle t-button--loading"
          data-v-c0b784f5=""
          role="button"
          type="button"
        >
          <div
            class="t-loading"
            style="font-size: 20px;"
          >
            <svg
              class="t-loading__gradient t-icon-loading"
              height="1em"
              style="animation-duration: 800ms; width: 20px; height: 20px;"
              version="1.1"
              viewBox="0 0 12 12"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <foreignobject
                height="12"
                width="12"
                x="0"
                y="0"
              >
                <div
                  class="t-loading__gradient-conic"
                />
              </foreignobject>
            </svg>
            <!---->
            <!---->
          </div>
          <span
            class="t-button__content"
          >
            
            加载中
            
          </span>
          <!---->
        </button>
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
    data-v-e07177be=""
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        幽灵按钮
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="row"
        data-v-3efbf598=""
        data-v-e07177be=""
      >
        <button
          aria-disabled="false"
          class="t-button t-button--size-large t-button--base t-button--primary t-button--rectangle t-button--ghost"
          data-v-3efbf598=""
          role="button"
          type="button"
        >
          <!---->
          <span
            class="t-button__content"
          >
            
            幽灵按钮
            
          </span>
          <!---->
        </button>
        <button
          aria-disabled="false"
          class="t-button t-button--size-large t-button--base t-button--danger t-button--rectangle t-button--ghost"
          data-v-3efbf598=""
          role="button"
          type="button"
        >
          <!---->
          <span
            class="t-button__content"
          >
            
            幽灵按钮
            
          </span>
          <!---->
        </button>
        <button
          aria-disabled="false"
          class="t-button t-button--size-large t-button--base t-button--default t-button--rectangle t-button--ghost"
          data-v-3efbf598=""
          role="button"
          type="button"
        >
          <!---->
          <span
            class="t-button__content"
          >
            
            幽灵按钮
            
          </span>
          <!---->
        </button>
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
    data-v-e07177be=""
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        组合按钮
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="row"
        data-v-8e466c6d=""
        data-v-e07177be=""
      >
        <button
          aria-disabled="false"
          class="t-button t-button--size-large t-button--base t-button--light t-button--rectangle"
          data-v-8e466c6d=""
          role="button"
          type="button"
        >
          <!---->
          <span
            class="t-button__content"
          >
            
            填充按钮
            
          </span>
          <!---->
        </button>
        <button
          aria-disabled="false"
          class="t-button t-button--size-large t-button--base t-button--primary t-button--rectangle"
          data-v-8e466c6d=""
          role="button"
          type="button"
        >
          <!---->
          <span
            class="t-button__content"
          >
            
            填充按钮
            
          </span>
          <!---->
        </button>
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
    data-v-e07177be=""
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        通栏按钮
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="row"
        data-v-df7bddf2=""
        data-v-e07177be=""
      >
        <button
          aria-disabled="false"
          class="t-button t-button--size-large t-button--base t-button--primary t-button--rectangle t-button--block"
          data-v-df7bddf2=""
          role="button"
          type="button"
        >
          <!---->
          <span
            class="t-button__content"
          >
            
            填充按钮
            
          </span>
          <!---->
        </button>
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block"
    data-v-e07177be=""
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        02 组件状态
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        按钮禁用态
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      
      <div
        class="row"
        data-v-1d4957ba=""
      >
        <button
          aria-disabled="true"
          class="t-button t-button--size-large t-button--base t-button--primary t-button--rectangle t-button--disabled"
          data-v-1d4957ba=""
          disabled=""
          role="button"
          type="button"
        >
          <!---->
          <span
            class="t-button__content"
          >
            
            填充按钮
            
          </span>
          <!---->
        </button>
        <button
          aria-disabled="true"
          class="t-button t-button--size-large t-button--base t-button--light t-button--rectangle t-button--disabled"
          data-v-1d4957ba=""
          disabled=""
          role="button"
          type="button"
        >
          <!---->
          <span
            class="t-button__content"
          >
            
            填充按钮
            
          </span>
          <!---->
        </button>
        <button
          aria-disabled="true"
          class="t-button t-button--size-large t-button--base t-button--default t-button--rectangle t-button--disabled"
          data-v-1d4957ba=""
          disabled=""
          role="button"
          type="button"
        >
          <!---->
          <span
            class="t-button__content"
          >
            
            填充按钮
            
          </span>
          <!---->
        </button>
      </div>
      <div
        class="row"
        data-v-1d4957ba=""
      >
        <button
          aria-disabled="true"
          class="t-button t-button--size-large t-button--outline t-button--primary t-button--rectangle t-button--disabled"
          data-v-1d4957ba=""
          disabled=""
          role="button"
          type="button"
        >
          <!---->
          <span
            class="t-button__content"
          >
            
            描边按钮
            
          </span>
          <!---->
        </button>
        <button
          aria-disabled="true"
          class="t-button t-button--size-large t-button--text t-button--primary t-button--rectangle t-button--disabled"
          data-v-1d4957ba=""
          disabled=""
          role="button"
          type="button"
        >
          <!---->
          <span
            class="t-button__content"
          >
            
            文字按钮
            
          </span>
          <!---->
        </button>
      </div>
      
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block"
    data-v-e07177be=""
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        03 组件样式
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        按钮尺寸
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="row"
        data-v-78d504d8=""
        data-v-e07177be=""
      >
        <button
          aria-disabled="false"
          class="t-button t-button--size-large t-button--base t-button--primary t-button--rectangle"
          data-v-78d504d8=""
          role="button"
          type="button"
        >
          <!---->
          <span
            class="t-button__content"
          >
            
            按钮 48
            
          </span>
          <!---->
        </button>
        <button
          aria-disabled="false"
          class="t-button t-button--size-medium t-button--base t-button--primary t-button--rectangle"
          data-v-78d504d8=""
          role="button"
          type="button"
        >
          <!---->
          <span
            class="t-button__content"
          >
            
            按钮 40
            
          </span>
          <!---->
        </button>
        <button
          aria-disabled="false"
          class="t-button t-button--size-small t-button--base t-button--primary t-button--rectangle"
          data-v-78d504d8=""
          role="button"
          type="button"
        >
          <!---->
          <span
            class="t-button__content"
          >
            
            按钮 32
            
          </span>
          <!---->
        </button>
        <button
          aria-disabled="false"
          class="t-button t-button--size-extra-small t-button--base t-button--primary t-button--rectangle"
          data-v-78d504d8=""
          role="button"
          type="button"
        >
          <!---->
          <span
            class="t-button__content"
          >
            
            按钮 28
            
          </span>
          <!---->
        </button>
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
    data-v-e07177be=""
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        按钮形状
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      
      <div
        class="row"
        data-v-3e6d1641=""
      >
        <button
          aria-disabled="false"
          class="t-button t-button--size-large t-button--base t-button--primary t-button--rectangle"
          data-v-3e6d1641=""
          role="button"
          type="button"
        >
          <!---->
          <span
            class="t-button__content"
          >
            
            填充按钮
            
          </span>
          <!---->
        </button>
        <button
          aria-disabled="false"
          aria-label="搜索"
          class="t-button t-button--size-large t-button--base t-button--primary t-button--square"
          data-v-3e6d1641=""
          role="button"
          type="button"
        >
          <svg
            class="t-icon t-icon-app"
            fill="none"
            height="1em"
            style="fill: none; font-size: 24px;"
            viewBox="0 0 24 24"
            width="1em"
          >
            <g
              id="app"
            >
              <g
                id="fill1"
              >
                <path
                  d="M3 3H10V10H3V3Z"
                  fill="transparent"
                />
                <path
                  d="M14 14H21V21H14V14Z"
                  fill="transparent"
                />
                <path
                  d="M3 14H10V21H3V14Z"
                  fill="transparent"
                />
              </g>
              <path
                d="M21.5 6.5C21.5 8.70914 19.7091 10.5 17.5 10.5C15.2909 10.5 13.5 8.70914 13.5 6.5C13.5 4.29086 15.2909 2.5 17.5 2.5C19.7091 2.5 21.5 4.29086 21.5 6.5Z"
                fill="transparent"
                id="fill2"
              />
              <g
                id="stroke1"
              >
                <path
                  d="M3 3H10V10H3V3Z"
                  stroke="currentColor"
                  stroke-width="2"
                />
                <path
                  d="M14 14H21V21H14V14Z"
                  stroke="currentColor"
                  stroke-width="2"
                />
                <path
                  d="M3 14H10V21H3V14Z"
                  stroke="currentColor"
                  stroke-width="2"
                />
              </g>
              <path
                d="M21.5 6.5C21.5 8.70914 19.7091 10.5 17.5 10.5C15.2909 10.5 13.5 8.70914 13.5 6.5C13.5 4.29086 15.2909 2.5 17.5 2.5C19.7091 2.5 21.5 4.29086 21.5 6.5Z"
                id="stroke2"
                stroke="currentColor"
                stroke-width="2"
              />
            </g>
          </svg>
          <span
            class="t-button__content"
          >
            <!---->
          </span>
          <!---->
        </button>
        <button
          aria-disabled="false"
          class="t-button t-button--size-large t-button--base t-button--primary t-button--round"
          data-v-3e6d1641=""
          role="button"
          type="button"
        >
          <!---->
          <span
            class="t-button__content"
          >
            
            填充按钮
            
          </span>
          <!---->
        </button>
        <button
          aria-disabled="false"
          aria-label="搜索"
          class="t-button t-button--size-large t-button--base t-button--primary t-button--circle"
          data-v-3e6d1641=""
          role="button"
          type="button"
        >
          <svg
            class="t-icon t-icon-app"
            fill="none"
            height="1em"
            style="fill: none; font-size: 24px;"
            viewBox="0 0 24 24"
            width="1em"
          >
            <g
              id="app"
            >
              <g
                id="fill1"
              >
                <path
                  d="M3 3H10V10H3V3Z"
                  fill="transparent"
                />
                <path
                  d="M14 14H21V21H14V14Z"
                  fill="transparent"
                />
                <path
                  d="M3 14H10V21H3V14Z"
                  fill="transparent"
                />
              </g>
              <path
                d="M21.5 6.5C21.5 8.70914 19.7091 10.5 17.5 10.5C15.2909 10.5 13.5 8.70914 13.5 6.5C13.5 4.29086 15.2909 2.5 17.5 2.5C19.7091 2.5 21.5 4.29086 21.5 6.5Z"
                fill="transparent"
                id="fill2"
              />
              <g
                id="stroke1"
              >
                <path
                  d="M3 3H10V10H3V3Z"
                  stroke="currentColor"
                  stroke-width="2"
                />
                <path
                  d="M14 14H21V21H14V14Z"
                  stroke="currentColor"
                  stroke-width="2"
                />
                <path
                  d="M3 14H10V21H3V14Z"
                  stroke="currentColor"
                  stroke-width="2"
                />
              </g>
              <path
                d="M21.5 6.5C21.5 8.70914 19.7091 10.5 17.5 10.5C15.2909 10.5 13.5 8.70914 13.5 6.5C13.5 4.29086 15.2909 2.5 17.5 2.5C19.7091 2.5 21.5 4.29086 21.5 6.5Z"
                id="stroke2"
                stroke="currentColor"
                stroke-width="2"
              />
            </g>
          </svg>
          <span
            class="t-button__content"
          >
            <!---->
          </span>
          <!---->
        </button>
      </div>
      <button
        aria-disabled="false"
        class="t-button t-button--size-large t-button--base t-button--primary t-button--rectangle t-button--block rectangle-button"
        data-v-3e6d1641=""
        role="button"
        type="button"
      >
        <!---->
        <span
          class="t-button__content"
        >
          
          填充按钮
          
        </span>
        <!---->
      </button>
      
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
    data-v-e07177be=""
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        按钮主题
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="section-theme"
        data-v-0e2e31f3=""
        data-v-e07177be=""
      >
        <div
          class="row"
          data-v-0e2e31f3=""
        >
          <button
            aria-disabled="false"
            class="t-button t-button--size-large t-button--base t-button--default t-button--rectangle"
            data-v-0e2e31f3=""
            role="button"
            type="button"
          >
            <!---->
            <span
              class="t-button__content"
            >
              
              填充按钮
              
            </span>
            <!---->
          </button>
          <button
            aria-disabled="false"
            class="t-button t-button--size-large t-button--outline t-button--default t-button--rectangle"
            data-v-0e2e31f3=""
            role="button"
            type="button"
          >
            <!---->
            <span
              class="t-button__content"
            >
              
              描边按钮
              
            </span>
            <!---->
          </button>
          <button
            aria-disabled="false"
            class="t-button t-button--size-large t-button--text t-button--default t-button--rectangle"
            data-v-0e2e31f3=""
            role="button"
            type="button"
          >
            <!---->
            <span
              class="t-button__content"
            >
              
              文字按钮
              
            </span>
            <!---->
          </button>
        </div>
        <div
          class="row"
          data-v-0e2e31f3=""
        >
          <button
            aria-disabled="false"
            class="t-button t-button--size-large t-button--base t-button--primary t-button--rectangle"
            data-v-0e2e31f3=""
            role="button"
            type="button"
          >
            <!---->
            <span
              class="t-button__content"
            >
              
              填充按钮
              
            </span>
            <!---->
          </button>
          <button
            aria-disabled="false"
            class="t-button t-button--size-large t-button--outline t-button--primary t-button--rectangle"
            data-v-0e2e31f3=""
            role="button"
            type="button"
          >
            <!---->
            <span
              class="t-button__content"
            >
              
              描边按钮
              
            </span>
            <!---->
          </button>
          <button
            aria-disabled="false"
            class="t-button t-button--size-large t-button--text t-button--primary t-button--rectangle"
            data-v-0e2e31f3=""
            role="button"
            type="button"
          >
            <!---->
            <span
              class="t-button__content"
            >
              
              文字按钮
              
            </span>
            <!---->
          </button>
        </div>
        <div
          class="row"
          data-v-0e2e31f3=""
        >
          <button
            aria-disabled="false"
            class="t-button t-button--size-large t-button--base t-button--danger t-button--rectangle"
            data-v-0e2e31f3=""
            role="button"
            type="button"
          >
            <!---->
            <span
              class="t-button__content"
            >
              
              填充按钮
              
            </span>
            <!---->
          </button>
          <button
            aria-disabled="false"
            class="t-button t-button--size-large t-button--outline t-button--danger t-button--rectangle"
            data-v-0e2e31f3=""
            role="button"
            type="button"
          >
            <!---->
            <span
              class="t-button__content"
            >
              
              描边按钮
              
            </span>
            <!---->
          </button>
          <button
            aria-disabled="false"
            class="t-button t-button--size-large t-button--text t-button--danger t-button--rectangle"
            data-v-0e2e31f3=""
            role="button"
            type="button"
          >
            <!---->
            <span
              class="t-button__content"
            >
              
              文字按钮
              
            </span>
            <!---->
          </button>
        </div>
        <div
          class="row"
          data-v-0e2e31f3=""
        >
          <button
            aria-disabled="false"
            class="t-button t-button--size-large t-button--base t-button--light t-button--rectangle"
            data-v-0e2e31f3=""
            role="button"
            type="button"
          >
            <!---->
            <span
              class="t-button__content"
            >
              
              填充按钮
              
            </span>
            <!---->
          </button>
          <button
            aria-disabled="false"
            class="t-button t-button--size-large t-button--outline t-button--light t-button--rectangle"
            data-v-0e2e31f3=""
            role="button"
            type="button"
          >
            <!---->
            <span
              class="t-button__content"
            >
              
              描边按钮
              
            </span>
            <!---->
          </button>
          <button
            aria-disabled="false"
            class="t-button t-button--size-large t-button--text t-button--light t-button--rectangle"
            data-v-0e2e31f3=""
            role="button"
            type="button"
          >
            <!---->
            <span
              class="t-button__content"
            >
              
              文字按钮
              
            </span>
            <!---->
          </button>
        </div>
      </div>
      
    </div>
  </div>
</div>
`;

exports[`Button > Button shapeVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="row"
    data-v-3e6d1641=""
  >
    <button
      aria-disabled="false"
      class="t-button t-button--size-large t-button--base t-button--primary t-button--rectangle"
      data-v-3e6d1641=""
      role="button"
      type="button"
    >
      <!---->
      <span
        class="t-button__content"
      >
        
        填充按钮
        
      </span>
      <!---->
    </button>
    <button
      aria-disabled="false"
      aria-label="搜索"
      class="t-button t-button--size-large t-button--base t-button--primary t-button--square"
      data-v-3e6d1641=""
      role="button"
      type="button"
    >
      <svg
        class="t-icon t-icon-app"
        fill="none"
        height="1em"
        style="fill: none; font-size: 24px;"
        viewBox="0 0 24 24"
        width="1em"
      >
        <g
          id="app"
        >
          <g
            id="fill1"
          >
            <path
              d="M3 3H10V10H3V3Z"
              fill="transparent"
            />
            <path
              d="M14 14H21V21H14V14Z"
              fill="transparent"
            />
            <path
              d="M3 14H10V21H3V14Z"
              fill="transparent"
            />
          </g>
          <path
            d="M21.5 6.5C21.5 8.70914 19.7091 10.5 17.5 10.5C15.2909 10.5 13.5 8.70914 13.5 6.5C13.5 4.29086 15.2909 2.5 17.5 2.5C19.7091 2.5 21.5 4.29086 21.5 6.5Z"
            fill="transparent"
            id="fill2"
          />
          <g
            id="stroke1"
          >
            <path
              d="M3 3H10V10H3V3Z"
              stroke="currentColor"
              stroke-width="2"
            />
            <path
              d="M14 14H21V21H14V14Z"
              stroke="currentColor"
              stroke-width="2"
            />
            <path
              d="M3 14H10V21H3V14Z"
              stroke="currentColor"
              stroke-width="2"
            />
          </g>
          <path
            d="M21.5 6.5C21.5 8.70914 19.7091 10.5 17.5 10.5C15.2909 10.5 13.5 8.70914 13.5 6.5C13.5 4.29086 15.2909 2.5 17.5 2.5C19.7091 2.5 21.5 4.29086 21.5 6.5Z"
            id="stroke2"
            stroke="currentColor"
            stroke-width="2"
          />
        </g>
      </svg>
      <span
        class="t-button__content"
      >
        <!---->
      </span>
      <!---->
    </button>
    <button
      aria-disabled="false"
      class="t-button t-button--size-large t-button--base t-button--primary t-button--round"
      data-v-3e6d1641=""
      role="button"
      type="button"
    >
      <!---->
      <span
        class="t-button__content"
      >
        
        填充按钮
        
      </span>
      <!---->
    </button>
    <button
      aria-disabled="false"
      aria-label="搜索"
      class="t-button t-button--size-large t-button--base t-button--primary t-button--circle"
      data-v-3e6d1641=""
      role="button"
      type="button"
    >
      <svg
        class="t-icon t-icon-app"
        fill="none"
        height="1em"
        style="fill: none; font-size: 24px;"
        viewBox="0 0 24 24"
        width="1em"
      >
        <g
          id="app"
        >
          <g
            id="fill1"
          >
            <path
              d="M3 3H10V10H3V3Z"
              fill="transparent"
            />
            <path
              d="M14 14H21V21H14V14Z"
              fill="transparent"
            />
            <path
              d="M3 14H10V21H3V14Z"
              fill="transparent"
            />
          </g>
          <path
            d="M21.5 6.5C21.5 8.70914 19.7091 10.5 17.5 10.5C15.2909 10.5 13.5 8.70914 13.5 6.5C13.5 4.29086 15.2909 2.5 17.5 2.5C19.7091 2.5 21.5 4.29086 21.5 6.5Z"
            fill="transparent"
            id="fill2"
          />
          <g
            id="stroke1"
          >
            <path
              d="M3 3H10V10H3V3Z"
              stroke="currentColor"
              stroke-width="2"
            />
            <path
              d="M14 14H21V21H14V14Z"
              stroke="currentColor"
              stroke-width="2"
            />
            <path
              d="M3 14H10V21H3V14Z"
              stroke="currentColor"
              stroke-width="2"
            />
          </g>
          <path
            d="M21.5 6.5C21.5 8.70914 19.7091 10.5 17.5 10.5C15.2909 10.5 13.5 8.70914 13.5 6.5C13.5 4.29086 15.2909 2.5 17.5 2.5C19.7091 2.5 21.5 4.29086 21.5 6.5Z"
            id="stroke2"
            stroke="currentColor"
            stroke-width="2"
          />
        </g>
      </svg>
      <span
        class="t-button__content"
      >
        <!---->
      </span>
      <!---->
    </button>
  </div>
  <button
    aria-disabled="false"
    class="t-button t-button--size-large t-button--base t-button--primary t-button--rectangle t-button--block rectangle-button"
    data-v-3e6d1641=""
    role="button"
    type="button"
  >
    <!---->
    <span
      class="t-button__content"
    >
      
      填充按钮
      
    </span>
    <!---->
  </button>
  
</div>
`;

exports[`Button > Button sizeVue demo works fine 1`] = `
<div
  class="row"
  data-v-78d504d8=""
>
  <button
    aria-disabled="false"
    class="t-button t-button--size-large t-button--base t-button--primary t-button--rectangle"
    data-v-78d504d8=""
    role="button"
    type="button"
  >
    <!---->
    <span
      class="t-button__content"
    >
      
      按钮 48
      
    </span>
    <!---->
  </button>
  <button
    aria-disabled="false"
    class="t-button t-button--size-medium t-button--base t-button--primary t-button--rectangle"
    data-v-78d504d8=""
    role="button"
    type="button"
  >
    <!---->
    <span
      class="t-button__content"
    >
      
      按钮 40
      
    </span>
    <!---->
  </button>
  <button
    aria-disabled="false"
    class="t-button t-button--size-small t-button--base t-button--primary t-button--rectangle"
    data-v-78d504d8=""
    role="button"
    type="button"
  >
    <!---->
    <span
      class="t-button__content"
    >
      
      按钮 32
      
    </span>
    <!---->
  </button>
  <button
    aria-disabled="false"
    class="t-button t-button--size-extra-small t-button--base t-button--primary t-button--rectangle"
    data-v-78d504d8=""
    role="button"
    type="button"
  >
    <!---->
    <span
      class="t-button__content"
    >
      
      按钮 28
      
    </span>
    <!---->
  </button>
</div>
`;

exports[`Button > Button statusVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="row"
    data-v-1d4957ba=""
  >
    <button
      aria-disabled="true"
      class="t-button t-button--size-large t-button--base t-button--primary t-button--rectangle t-button--disabled"
      data-v-1d4957ba=""
      disabled=""
      role="button"
      type="button"
    >
      <!---->
      <span
        class="t-button__content"
      >
        
        填充按钮
        
      </span>
      <!---->
    </button>
    <button
      aria-disabled="true"
      class="t-button t-button--size-large t-button--base t-button--light t-button--rectangle t-button--disabled"
      data-v-1d4957ba=""
      disabled=""
      role="button"
      type="button"
    >
      <!---->
      <span
        class="t-button__content"
      >
        
        填充按钮
        
      </span>
      <!---->
    </button>
    <button
      aria-disabled="true"
      class="t-button t-button--size-large t-button--base t-button--default t-button--rectangle t-button--disabled"
      data-v-1d4957ba=""
      disabled=""
      role="button"
      type="button"
    >
      <!---->
      <span
        class="t-button__content"
      >
        
        填充按钮
        
      </span>
      <!---->
    </button>
  </div>
  <div
    class="row"
    data-v-1d4957ba=""
  >
    <button
      aria-disabled="true"
      class="t-button t-button--size-large t-button--outline t-button--primary t-button--rectangle t-button--disabled"
      data-v-1d4957ba=""
      disabled=""
      role="button"
      type="button"
    >
      <!---->
      <span
        class="t-button__content"
      >
        
        描边按钮
        
      </span>
      <!---->
    </button>
    <button
      aria-disabled="true"
      class="t-button t-button--size-large t-button--text t-button--primary t-button--rectangle t-button--disabled"
      data-v-1d4957ba=""
      disabled=""
      role="button"
      type="button"
    >
      <!---->
      <span
        class="t-button__content"
      >
        
        文字按钮
        
      </span>
      <!---->
    </button>
  </div>
  
</div>
`;

exports[`Button > Button themeVue demo works fine 1`] = `
<div
  class="section-theme"
  data-v-0e2e31f3=""
>
  <div
    class="row"
    data-v-0e2e31f3=""
  >
    <button
      aria-disabled="false"
      class="t-button t-button--size-large t-button--base t-button--default t-button--rectangle"
      data-v-0e2e31f3=""
      role="button"
      type="button"
    >
      <!---->
      <span
        class="t-button__content"
      >
        
        填充按钮
        
      </span>
      <!---->
    </button>
    <button
      aria-disabled="false"
      class="t-button t-button--size-large t-button--outline t-button--default t-button--rectangle"
      data-v-0e2e31f3=""
      role="button"
      type="button"
    >
      <!---->
      <span
        class="t-button__content"
      >
        
        描边按钮
        
      </span>
      <!---->
    </button>
    <button
      aria-disabled="false"
      class="t-button t-button--size-large t-button--text t-button--default t-button--rectangle"
      data-v-0e2e31f3=""
      role="button"
      type="button"
    >
      <!---->
      <span
        class="t-button__content"
      >
        
        文字按钮
        
      </span>
      <!---->
    </button>
  </div>
  <div
    class="row"
    data-v-0e2e31f3=""
  >
    <button
      aria-disabled="false"
      class="t-button t-button--size-large t-button--base t-button--primary t-button--rectangle"
      data-v-0e2e31f3=""
      role="button"
      type="button"
    >
      <!---->
      <span
        class="t-button__content"
      >
        
        填充按钮
        
      </span>
      <!---->
    </button>
    <button
      aria-disabled="false"
      class="t-button t-button--size-large t-button--outline t-button--primary t-button--rectangle"
      data-v-0e2e31f3=""
      role="button"
      type="button"
    >
      <!---->
      <span
        class="t-button__content"
      >
        
        描边按钮
        
      </span>
      <!---->
    </button>
    <button
      aria-disabled="false"
      class="t-button t-button--size-large t-button--text t-button--primary t-button--rectangle"
      data-v-0e2e31f3=""
      role="button"
      type="button"
    >
      <!---->
      <span
        class="t-button__content"
      >
        
        文字按钮
        
      </span>
      <!---->
    </button>
  </div>
  <div
    class="row"
    data-v-0e2e31f3=""
  >
    <button
      aria-disabled="false"
      class="t-button t-button--size-large t-button--base t-button--danger t-button--rectangle"
      data-v-0e2e31f3=""
      role="button"
      type="button"
    >
      <!---->
      <span
        class="t-button__content"
      >
        
        填充按钮
        
      </span>
      <!---->
    </button>
    <button
      aria-disabled="false"
      class="t-button t-button--size-large t-button--outline t-button--danger t-button--rectangle"
      data-v-0e2e31f3=""
      role="button"
      type="button"
    >
      <!---->
      <span
        class="t-button__content"
      >
        
        描边按钮
        
      </span>
      <!---->
    </button>
    <button
      aria-disabled="false"
      class="t-button t-button--size-large t-button--text t-button--danger t-button--rectangle"
      data-v-0e2e31f3=""
      role="button"
      type="button"
    >
      <!---->
      <span
        class="t-button__content"
      >
        
        文字按钮
        
      </span>
      <!---->
    </button>
  </div>
  <div
    class="row"
    data-v-0e2e31f3=""
  >
    <button
      aria-disabled="false"
      class="t-button t-button--size-large t-button--base t-button--light t-button--rectangle"
      data-v-0e2e31f3=""
      role="button"
      type="button"
    >
      <!---->
      <span
        class="t-button__content"
      >
        
        填充按钮
        
      </span>
      <!---->
    </button>
    <button
      aria-disabled="false"
      class="t-button t-button--size-large t-button--outline t-button--light t-button--rectangle"
      data-v-0e2e31f3=""
      role="button"
      type="button"
    >
      <!---->
      <span
        class="t-button__content"
      >
        
        描边按钮
        
      </span>
      <!---->
    </button>
    <button
      aria-disabled="false"
      class="t-button t-button--size-large t-button--text t-button--light t-button--rectangle"
      data-v-0e2e31f3=""
      role="button"
      type="button"
    >
      <!---->
      <span
        class="t-button__content"
      >
        
        文字按钮
        
      </span>
      <!---->
    </button>
  </div>
</div>
`;
